--- a/example.html
+++ b/example.html
@@ -2,6 +2,7 @@
 
 <head>
   <title>example</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
   <script src="HBcaoPopup.min.js"></script>
   <link rel="stylesheet" href="HBcaoPopup.min.css">
